--- a/chemodan__shop/balance.html
+++ b/chemodan__shop/balance.html
@@ -1607,19 +1607,19 @@
 									<label for="bal" class="checkboxlabel">Выделить отличия</label>
 								</div>
 							</div>
-							<div class="balance__row balance__row_odd balance__row_1 balance__row_diff">
+							<div class="balance__row balance__row_odd balance__row_1">
 								<p>БРЕНД</p>
 							</div>
-							<div class="balance__row balance__row_even balance__row_2 balance__row_diff">
+							<div class="balance__row balance__row_even balance__row_diff balance__row_2 balance__row_diff">
 								<p>МАТЕРИАЛ</p>
 							</div>
-							<div class="balance__row balance__row_odd balance__row_3 balance__row_diff">
+							<div class="balance__row balance__row_odd balance__row_3">
 								<p>ШИРИНА</p>
 							</div>
-							<div class="balance__row balance__row_even balance__row_4 balance__row_diff">
+							<div class="balance__row balance__row_even  balance__row_4 balance__row_diff">
 								<p>ВЫСОТА</p>
 							</div>
-							<div class="balance__row balance__row_odd balance__row_5 balance__row_diff">
+							<div class="balance__row balance__row_odd balance__row_5">
 								<p>ГЛУБИНА</p>
 							</div>
 							<div class="balance__row balance__row_even balance__row_6">
@@ -1637,19 +1637,19 @@
 							<div class="balance__row balance__row_even balance__row_10 balance__row_diff">
 								<p>КАРМАНЫ</p>
 							</div>
-							<div class="balance__row balance__row_odd balance__row_11 balance__row_diff">
+							<div class="balance__row balance__row_odd balance__row_11">
 								<p>УВЕЛИЧЕНИЯ ОБЪЁМА</p>
 							</div>
 							<div class="balance__row balance__row_even balance__row_12 balance__row_diff">
 								<p>ДОПОЛНИТЕЛЬНАЯ РУЧКА</p>
 							</div>
-							<div class="balance__row balance__row_odd balance__row_13 balance__row_diff">
+							<div class="balance__row balance__row_odd balance__row_13">
 								<p>ОБЪЁМ</p>
 							</div>
 							<div class="balance__row balance__row_even balance__row_14 balance__row_diff">
 								<p>СТРАНА БРЕНДА</p>
 							</div>
-							<div class="balance__row balance__row_odd balance__row_15 balance__row_diff">
+							<div class="balance__row balance__row_odd balance__row_15">
 								<p>СТРАНА ПРОИЗВОДИТЕЛЬ</p>
 							</div>
 						</div>
@@ -1669,13 +1669,13 @@
 							<div class="balance__row balance__row_odd2 balance__row_1">
 								<p>Alezar</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_2">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_2">
 								<p>Ткань</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_3">
 								<p>47 см</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_4">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_4">
 								<p>77 см</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_5">
@@ -1687,13 +1687,13 @@
 							<div class="balance__row balance__row_odd2 balance__row_7">
 								<p>Мужчинам</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_8">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_8">
 								<p>4 колеса</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_9">
 								<p>Есть</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_10">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_10">
 								<p>1 карман</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_11">
@@ -1705,7 +1705,7 @@
 							<div class="balance__row balance__row_odd2 balance__row_13">
 								<p>95 л</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_14">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_14">
 								<p>Финляндия</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_15">
@@ -1728,13 +1728,13 @@
 							<div class="balance__row balance__row_odd2 balance__row_1">
 								<p>Alezar</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_2">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_2">
 								<p>Ткань</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_3">
 								<p>47 см</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_4">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_4">
 								<p>77 см</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_5">
@@ -1746,13 +1746,13 @@
 							<div class="balance__row balance__row_odd2 balance__row_7">
 								<p>Мужчинам</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_8">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_8">
 								<p>4 колеса</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_9">
 								<p>Есть</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_10">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_10">
 								<p>1 карман</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_11">
@@ -1764,7 +1764,7 @@
 							<div class="balance__row balance__row_odd2 balance__row_13">
 								<p>95 л</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_14">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_14">
 								<p>Финляндия</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_15">
@@ -1787,13 +1787,13 @@
 							<div class="balance__row balance__row_odd2 balance__row_1">
 								<p>Alezar</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_2">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_2">
 								<p>Ткань</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_3">
 								<p>47 см</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_4">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_4">
 								<p>77 см</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_5">
@@ -1805,13 +1805,13 @@
 							<div class="balance__row balance__row_odd2 balance__row_7">
 								<p>Мужчинам</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_8">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_8">
 								<p>4 колеса</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_9">
 								<p>Есть</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_10">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_10">
 								<p>1 карман</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_11">
@@ -1823,7 +1823,7 @@
 							<div class="balance__row balance__row_odd2 balance__row_13">
 								<p>95 л</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_14">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_14">
 								<p>Финляндия</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_15">
@@ -1846,13 +1846,13 @@
 							<div class="balance__row balance__row_odd2 balance__row_1">
 								<p>Alezar</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_2">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_2">
 								<p>Ткань</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_3">
 								<p>47 см</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_4">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_4">
 								<p>77 см</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_5">
@@ -1864,13 +1864,13 @@
 							<div class="balance__row balance__row_odd2 balance__row_7">
 								<p>Мужчинам</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_8">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_8">
 								<p>4 колеса</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_9">
 								<p>Есть</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_10">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_10">
 								<p>1 карман</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_11">
@@ -1882,7 +1882,7 @@
 							<div class="balance__row balance__row_odd2 balance__row_13">
 								<p>95 л</p>
 							</div>
-							<div class="balance__row balance__row_even2 balance__row_14">
+							<div class="balance__row balance__row_even2 balance__row_diff balance__row_14">
 								<p>Финляндия</p>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_15">
