--- a/chemodan__shop/index.html
+++ b/chemodan__shop/index.html
@@ -82,6 +82,15 @@
 													<a href="">Зелёные</a>
 												</div>
 											</div>
+											<div class="dropdown__item dropdown__item dropdown__item_price">
+											<span class="dropdown__tip dropdown__tip_title">Цена</span>
+											<div class="dropdown__itemfull">
+												<p class="dropdown__price">до 5 000 руб.</p>
+												<p class="dropdown__price">5 000 - 10 000 руб.</p>
+												<p class="dropdown__price">10 000 - 15 000 руб.</p>
+												<p class="dropdown__price">свыше 15 000 руб.</p>
+											</div>
+										</div>
 										</div>
 									</div>
 									<div class="dropdown__cont">
@@ -777,7 +786,7 @@
 						<span>Кожгалантерея</span>
 					</div>
 					<div class="bannercat__item bannercat__item_6">
-						<img src="img/icon_accessories.svg" alt="" class="bannercat__img bannercat__img_6">
+						<img src="img/icon_tag.svg" alt="" class="bannercat__img bannercat__img_6">
 						<span>Аксессуары</span>
 					</div>
 				</div>
@@ -3307,7 +3316,7 @@
 					<a href="" class="modalrun1"> Регистрация</a>
 				</div>
 				<div class="htabs">
-					<div class="htabs__item htabs__item_1 htabs__item_active">
+					<div class="htabs__item htabs__item_1">
 						<img src="img/icon_compare.svg" alt="">
 						<span>4</span>
 						<div class="htabs__modal htabs__modal_1">
