--- a/chemodan__shop/basket.html
+++ b/chemodan__shop/basket.html
@@ -2319,6 +2319,22 @@
 		<div class="overlay"></div>
 		<!--Modal window end-->	
 		<!--Modal window-->
+		<div class="modalform modalrem">
+			<span class="modal__close">+</span>
+			<h2 class="modal__title">Забыли пароль</h2>
+			<form action="#" class="modal__form">
+				<div class="modal__input">
+					<label>Введите ваш e-mail:</label>
+					<input type="text" placeholder="E-mail*">
+				</div>
+				<a href="" class="modal__log modalrun2">Вход</a>
+				<a href="" class="modal__reg modalrun1">Регистрация</a>
+				<button class="modal__btn">Восстановить</button>
+			</form>
+		</div>
+		<div class="overlay"></div>
+		<!--Modal window end-->
+		<!--Modal window-->
 		<div class="modalform modallog">
 			<span class="modal__close">+</span>
 			<h2 class="modal__title">Вход</h2>
@@ -2331,7 +2347,7 @@
 					<label>Пароль:</label>
 					<input type="text" placeholder="Пароль*">
 				</div>
-				<a href="" class="modal__forget">Забыли пароль?</a>
+				<a href="" class="modal__forget modalrun6">Забыли пароль?</a>
 				<a href="" class="modal__reg modalrun1">Регистрация</a>
 				<button class="modal__btn">Войти</button>
 			</form>
