--- a/chemodan__shop/index.html
+++ b/chemodan__shop/index.html
@@ -72,17 +72,17 @@
 													<a href="">Красные</a>
 													<a href="">Чёрные</a>
 													<a href="">Синие</a>
-													<a href="">Фиолетовые</a>
+													<!-- <a href="">Фиолетовые</a> -->
 												</div>
 												<div class="dropdown__itembox">
 													<a href="">Белые</a>
 													<a href="">Розовые</a>
 													<a href="">Голубые</a>
 													<a href="">Жёлтые</a>
-													<a href="">Зелёные</a>
+													<!-- <a href="">Зелёные</a> -->
 												</div>
 											</div>
-											<div class="dropdown__item dropdown__item dropdown__item_price">
+											<div class="dropdown__item dropdown__item dropdown__item_price2">
 											<span class="dropdown__tip dropdown__tip_title">Цена</span>
 											<div class="dropdown__itemfull">
 												<p class="dropdown__price">до 5 000 руб.</p>
@@ -94,16 +94,17 @@
 										</div>
 									</div>
 									<div class="dropdown__cont">
-										<div class="dropdown__item dropdown__item dropdown__item_price">
-											<span class="dropdown__tip dropdown__tip_title">Цена</span>
-											<div class="dropdown__itemfull">
-												<p class="dropdown__price">до 5 000 руб.</p>
-												<p class="dropdown__price">5 000 - 10 000 руб.</p>
-												<p class="dropdown__price">10 000 - 15 000 руб.</p>
-												<p class="dropdown__price">свыше 15 000 руб.</p>
+										<div class="dropdown__item dropdown__item_akcii dropdown__item_akcii2">
+											<span class="product__tip product__tip_orange dropdown__tip">ХИТ</span>
+											<div class="dropdown__itemleft">
+												<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
+												<p class="dropdown__price">3 690 руб.</p>
+											</div>
+											<div class="dropdown__itemright">
+												<img class="dropdown__img" src="img/suitcase_medium.jpg" alt="">
 											</div>
 										</div>
-										<div class="dropdown__item dropdown__item_brand dropdown__item_sc">
+										<div class="dropdown__item dropdown__item_brand dropdown__item_brand4">
 											<span class="dropdown__tip dropdown__tip_title">Популярные бренды</span>
 											<div class="dropdown__itemfull dropdown__itemfull_brand">
 												<p class="dropdown__brand">
@@ -118,15 +119,9 @@
 												<p class="dropdown__brand">
 													<img src="img/samsonit.jpg" alt="">
 												</p>
-												<p class="dropdown__brand">
-													<img src="img/samsonit.jpg" alt="">
-												</p>
-												<p class="dropdown__brand">
-													<img src="img/samsonit.jpg" alt="">
-												</p>
 											</div>
 										</div>
-										<div class="dropdown__item dropdown__item_akcii">
+										<div class="dropdown__item dropdown__item_akcii dropdown__item_akcii2">
 											<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 											<div class="dropdown__itemleft">
 												<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -136,8 +131,8 @@
 												<img class="dropdown__img" src="img/suitcase_medium.jpg" alt="">
 											</div>
 										</div>
-										<div class="dropdown__item dropdown__item_akcii">
-											<span class="product__tip product__tip_orange dropdown__tip">ХИТ</span>
+										<div class="dropdown__item dropdown__item_akcii dropdown__item_akcii2">
+											<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 											<div class="dropdown__itemleft">
 												<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
 												<p class="dropdown__price">3 690 руб.</p>
@@ -404,7 +399,7 @@
 										</div>
 									</div>
 									<div class="dropdown__cont">
-										<div class="dropdown__item dropdown__item_brand">
+										<div class="dropdown__item dropdown__item_brand dropdown__item_brand3">
 											<span class="dropdown__tip dropdown__tip_title">Популярные бренды</span>
 											<div class="dropdown__itemfull dropdown__itemfull_brand">
 												<p class="dropdown__brand">
@@ -3191,6 +3186,22 @@
 		<div class="overlay"></div>
 		<!--Modal window end-->	
 		<!--Modal window-->
+		<div class="modalform modalrem">
+			<span class="modal__close">+</span>
+			<h2 class="modal__title">Забыли пароль</h2>
+			<form action="#" class="modal__form">
+				<div class="modal__input">
+					<label>Введите ваш e-mail:</label>
+					<input type="text" placeholder="E-mail*">
+				</div>
+				<a href="" class="modal__log modalrun2">Вход</a>
+				<a href="" class="modal__reg modalrun1">Регистрация</a>
+				<button class="modal__btn">Восстановить</button>
+			</form>
+		</div>
+		<div class="overlay"></div>
+		<!--Modal window end-->
+		<!--Modal window-->
 		<div class="modalform modallog">
 			<span class="modal__close">+</span>
 			<h2 class="modal__title">Вход</h2>
@@ -3203,7 +3214,7 @@
 					<label>Пароль:</label>
 					<input type="text" placeholder="Пароль*">
 				</div>
-				<a href="" class="modal__forget">Забыли пароль?</a>
+				<a href="" class="modal__forget modalrun6">Забыли пароль?</a>
 				<a href="" class="modal__reg modalrun1">Регистрация</a>
 				<button class="modal__btn">Войти</button>
 			</form>
