--- a/smoky/balance.html
+++ b/smoky/balance.html
@@ -2218,7 +2218,7 @@
 			</div>
 			<!--Modal window-->
 			<div class="modalform modal18">
-				<span class="modal__close"><i class="fa fa-times" aria-hidden="true"></i></span>
+				<!-- <span class="modal__close"><i class="fa fa-times" aria-hidden="true"></i></span> -->
 				<h2 class="modalform__title">Подтвердите, что Вам больше 18 лет</h2>
 				<p class="modalform__p">
 					МИНЗДРАВ ПРЕДУПРЕЖДАЕТ: КУРЕНИЕ НАНОСИТ НЕПОПРАВИМЫЙ ВРЕД ВАШЕМУ ЗДОРОВЬЮ!<br>
@@ -2249,7 +2249,7 @@
 							<p>Пароль*</p>
 							<input type="password" placeholder="Введите пароль">
 						</div>
-						<a href="" class="loginpop__pass">Забыли пароль?</a>
+						<a href="" class="loginpop__pass modal-run7">Забыли пароль?</a>
 						<button class="showmore">Войти</button>
 					</form>
 				</div>
@@ -2292,7 +2292,7 @@
 							<p>Пароль*</p>
 							<input type="password" placeholder="Введите пароль">
 						</div>
-						<a href="" class="loginpop__pass">Забыли пароль?</a>
+						<a href="" class="loginpop__pass modal-run7">Забыли пароль?</a>
 						<button class="showmore">Зарегистрироваться</button>
 					</form>
 				</div>
@@ -2307,6 +2307,23 @@
 							<a href=""><img src="images/f5.png" alt=""></a>
 						</div>
 					</div>
+				</div>
+			</div>
+			<div class="overlay"></div>
+			<!--Modal window end-->
+			<!--Modal window-->
+			<div class="modalform modalpass">
+				<span class="modal__close"><i class="fa fa-times" aria-hidden="true"></i></span>
+				<h2 class="modalform__title modalcall__title">Восстановление пароля</h2>
+				<div class="loginpop__box loginpop__box_1">
+					<form action="#">
+						<div class="loginpop__input">
+							<p>Электронная почта (E-mail)*</p>
+							<input type="email" placeholder="example@google.com">
+						</div>
+						<a href="" class="loginpop__pass modal-run6">Регистрация</a>
+						<button class="showmore">Восстановить</button>
+					</form>
 				</div>
 			</div>
 			<div class="overlay"></div>
