--- a/smoky/cart.html
+++ b/smoky/cart.html
@@ -1847,7 +1847,7 @@
 						<a href="">Оформление заказа</a>
 					</div>
 					<div class="cart">
-						<h2 class="main__title">Корзина</h2>
+						<h2 class="main__title">Заказ №578-01</h2>
 						<div class="carttable">
 							<div class="carttable__row carttable__row_title">
 								<div class="carttable__col carttable__col_1">
@@ -1910,15 +1910,7 @@
 								</div>
 								<div class="carttable__col carttable__col_4">
 									<div class="carttable__item carttable__item_c">
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text" tabindex="0" value="0">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
-										</div>
+										<p class="carttable__text">1</p>
 									</div>
 								</div>
 								<div class="carttable__col carttable__col_5">
@@ -1959,15 +1951,7 @@
 								</div>
 								<div class="carttable__col carttable__col_4">
 									<div class="carttable__item carttable__item_c">
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text" tabindex="0" value="0">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
-										</div>
+										<p class="carttable__text">1</p>
 									</div>
 								</div>
 								<div class="carttable__col carttable__col_5">
@@ -2008,15 +1992,7 @@
 								</div>
 								<div class="carttable__col carttable__col_4">
 									<div class="carttable__item carttable__item_c">
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text" tabindex="0" value="0">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
-										</div>
+										<p class="carttable__text">1</p>
 									</div>
 								</div>
 								<div class="carttable__col carttable__col_5">
@@ -2095,17 +2071,9 @@
 									<div class="carttable__col carttable__col_4">
 										<div class="carttable__item carttable__item_c">
 											<h2 class="carttable__title carttable__subtitle">
-												Качество:
+												Количество:
 											</h2>
-											<div class="popular__amount">
-												<span>
-													<i class="fa fa-minus" aria-hidden="true"></i>
-												</span>
-												<input type="text" tabindex="0">
-												<span>
-													<i class="fa fa-plus" aria-hidden="true"></i>
-												</span>
-											</div>
+											<p class="carttable__text carttable__text2">1</p>
 										</div>
 									</div>
 									<div class="carttable__col carttable__col_5">
@@ -2168,17 +2136,9 @@
 									<div class="carttable__col carttable__col_4">
 										<div class="carttable__item carttable__item_c">
 											<h2 class="carttable__title carttable__subtitle">
-												Качество:
+												Количество:
 											</h2>
-											<div class="popular__amount">
-												<span>
-													<i class="fa fa-minus" aria-hidden="true"></i>
-												</span>
-												<input type="text" tabindex="0">
-												<span>
-													<i class="fa fa-plus" aria-hidden="true"></i>
-												</span>
-											</div>
+											<p class="carttable__text carttable__text2">1</p>
 										</div>
 									</div>
 									<div class="carttable__col carttable__col_5">
@@ -2241,17 +2201,9 @@
 									<div class="carttable__col carttable__col_4">
 										<div class="carttable__item carttable__item_c">
 											<h2 class="carttable__title carttable__subtitle">
-												Качество:
+												Количество:
 											</h2>
-											<div class="popular__amount">
-												<span>
-													<i class="fa fa-minus" aria-hidden="true"></i>
-												</span>
-												<input type="text" tabindex="0">
-												<span>
-													<i class="fa fa-plus" aria-hidden="true"></i>
-												</span>
-											</div>
+											<p class="carttable__text carttable__text2">1</p>
 										</div>
 									</div>
 									<div class="carttable__col carttable__col_5">
@@ -2397,7 +2349,7 @@
 			</div>
 			<!--Modal window-->
 			<div class="modalform modal18">
-				<span class="modal__close"><i class="fa fa-times" aria-hidden="true"></i></span>
+				<!-- <span class="modal__close"><i class="fa fa-times" aria-hidden="true"></i></span> -->
 				<h2 class="modalform__title">Подтвердите, что Вам больше 18 лет</h2>
 				<p class="modalform__p">
 					МИНЗДРАВ ПРЕДУПРЕЖДАЕТ: КУРЕНИЕ НАНОСИТ НЕПОПРАВИМЫЙ ВРЕД ВАШЕМУ ЗДОРОВЬЮ!<br>
