--- a/smoky/wishlist.html
+++ b/smoky/wishlist.html
@@ -2099,7 +2099,7 @@
 			</div>
 			<!--Modal window-->
 			<div class="modalform modal18">
-				<span class="modal__close"><i class="fa fa-times" aria-hidden="true"></i></span>
+				<!-- <span class="modal__close"><i class="fa fa-times" aria-hidden="true"></i></span> -->
 				<h2 class="modalform__title">Подтвердите, что Вам больше 18 лет</h2>
 				<p class="modalform__p">
 					МИНЗДРАВ ПРЕДУПРЕЖДАЕТ: КУРЕНИЕ НАНОСИТ НЕПОПРАВИМЫЙ ВРЕД ВАШЕМУ ЗДОРОВЬЮ!<br>
@@ -2117,43 +2117,6 @@
 			<div class="overlay2"></div>
 			<!--Modal window end-->
 			<!--Modal window-->
-			<div class="modalform modalreg">
-				<span class="modal__close"><i class="fa fa-times" aria-hidden="true"></i></span>
-				<h2 class="modalform__title modalcall__title">Регистрация</h2>
-				<div class="loginpop__box loginpop__box_1">
-					<form action="#">
-						<div class="loginpop__input">
-							<p>Электронная почта (E-mail)*</p>
-							<input type="email" placeholder="example@google.com">
-						</div>
-						<div class="loginpop__input">
-							<p>Пароль*</p>
-							<input type="password" placeholder="Введите пароль">
-						</div>
-						<div class="loginpop__input">
-							<p>Пароль*</p>
-							<input type="password" placeholder="Введите пароль">
-						</div>
-						<a href="" class="loginpop__pass">Забыли пароль?</a>
-						<button class="showmore">Зарегистрироваться</button>
-					</form>
-				</div>
-				<div class="loginpop__box">
-					<div class="loginpop__soccont">
-						<p>Войти через социальные сети:</p>
-						<div class="socials">
-							<a href=""><img src="images/f1.png" alt=""></a>
-							<a href=""><img src="images/f2.png" alt=""></a>
-							<a href=""><img src="images/f3.png" alt=""></a>
-							<a href=""><img src="images/f4.png" alt=""></a>
-							<a href=""><img src="images/f5.png" alt=""></a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="overlay"></div>
-			<!--Modal window end-->
-			<!--Modal window-->
 			<div class="modalform modallog">
 				<span class="modal__close"><i class="fa fa-times" aria-hidden="true"></i></span>
 				<h2 class="modalform__title modalcall__title">Вход в аккаунт</h2>
@@ -2167,7 +2130,7 @@
 							<p>Пароль*</p>
 							<input type="password" placeholder="Введите пароль">
 						</div>
-						<a href="" class="loginpop__pass">Забыли пароль?</a>
+						<a href="" class="loginpop__pass modal-run7">Забыли пароль?</a>
 						<button class="showmore">Войти</button>
 					</form>
 				</div>
@@ -2188,6 +2151,60 @@
 						<p>Нет учётной записи?</p>
 						<a href="" class="modal-run6">Зарегистрироваться</a>
 					</div>
+				</div>
+			</div>
+			<div class="overlay"></div>
+			<!--Modal window end-->
+			<!--Modal window-->
+			<div class="modalform modalreg">
+				<span class="modal__close"><i class="fa fa-times" aria-hidden="true"></i></span>
+				<h2 class="modalform__title modalcall__title">Регистрация</h2>
+				<div class="loginpop__box loginpop__box_1">
+					<form action="#">
+						<div class="loginpop__input">
+							<p>Электронная почта (E-mail)*</p>
+							<input type="email" placeholder="example@google.com">
+						</div>
+						<div class="loginpop__input">
+							<p>Пароль*</p>
+							<input type="password" placeholder="Введите пароль">
+						</div>
+						<div class="loginpop__input">
+							<p>Пароль*</p>
+							<input type="password" placeholder="Введите пароль">
+						</div>
+						<a href="" class="loginpop__pass modal-run7">Забыли пароль?</a>
+						<button class="showmore">Зарегистрироваться</button>
+					</form>
+				</div>
+				<div class="loginpop__box">
+					<div class="loginpop__soccont">
+						<p>Войти через социальные сети:</p>
+						<div class="socials">
+							<a href=""><img src="images/f1.png" alt=""></a>
+							<a href=""><img src="images/f2.png" alt=""></a>
+							<a href=""><img src="images/f3.png" alt=""></a>
+							<a href=""><img src="images/f4.png" alt=""></a>
+							<a href=""><img src="images/f5.png" alt=""></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="overlay"></div>
+			<!--Modal window end-->
+			<!--Modal window-->
+			<div class="modalform modalpass">
+				<span class="modal__close"><i class="fa fa-times" aria-hidden="true"></i></span>
+				<h2 class="modalform__title modalcall__title">Восстановление пароля</h2>
+				<div class="loginpop__box loginpop__box_1">
+					<form action="#">
+						<div class="loginpop__input">
+							<p>Электронная почта (E-mail)*</p>
+							<input type="email" placeholder="example@google.com">
+						</div>
+						<a href="" class="loginpop__pass modal-run6">Регистрация</a>
+						<button class="showmore">Восстановить</button>
+					</form>
 				</div>
 			</div>
 			<div class="overlay"></div>
