--- a/smoky/account_oo.html
+++ b/smoky/account_oo.html
@@ -1844,7 +1844,7 @@
 					<div class="breadcrumbs">
 						<a href="">Главная</a>
 						<span>/</span>
-						<a href="">Оформление заказа</a>
+						<a href="">Заказ №578-01</a>
 					</div>
 					<div class="cart">
 						<h2 class="main__title">Заказ №578-01</h2>
@@ -1910,15 +1910,7 @@
 								</div>
 								<div class="carttable__col carttable__col_4">
 									<div class="carttable__item carttable__item_c">
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text" tabindex="0">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
-										</div>
+										<p class="carttable__text carttable__text2">1</p>
 									</div>
 								</div>
 								<div class="carttable__col carttable__col_5">
@@ -1959,15 +1951,7 @@
 								</div>
 								<div class="carttable__col carttable__col_4">
 									<div class="carttable__item carttable__item_c">
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text" tabindex="0">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
-										</div>
+										<p class="carttable__text carttable__text2">1</p>
 									</div>
 								</div>
 								<div class="carttable__col carttable__col_5">
@@ -2008,15 +1992,7 @@
 								</div>
 								<div class="carttable__col carttable__col_4">
 									<div class="carttable__item carttable__item_c">
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text" tabindex="0">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
-										</div>
+										<p class="carttable__text carttable__text2">1</p>
 									</div>
 								</div>
 								<div class="carttable__col carttable__col_5">
@@ -2097,15 +2073,7 @@
 											<h2 class="carttable__title carttable__subtitle">
 												Качество:
 											</h2>
-											<div class="popular__amount">
-												<span>
-													<i class="fa fa-minus" aria-hidden="true"></i>
-												</span>
-												<input type="text" tabindex="0">
-												<span>
-													<i class="fa fa-plus" aria-hidden="true"></i>
-												</span>
-											</div>
+											<p class="carttable__text carttable__text2">1</p>
 										</div>
 									</div>
 									<div class="carttable__col carttable__col_5">
@@ -2170,15 +2138,7 @@
 											<h2 class="carttable__title carttable__subtitle">
 												Качество:
 											</h2>
-											<div class="popular__amount">
-												<span>
-													<i class="fa fa-minus" aria-hidden="true"></i>
-												</span>
-												<input type="text" tabindex="0">
-												<span>
-													<i class="fa fa-plus" aria-hidden="true"></i>
-												</span>
-											</div>
+											<p class="carttable__text carttable__text2">1</p>
 										</div>
 									</div>
 									<div class="carttable__col carttable__col_5">
@@ -2243,15 +2203,7 @@
 											<h2 class="carttable__title carttable__subtitle">
 												Качество:
 											</h2>
-											<div class="popular__amount">
-												<span>
-													<i class="fa fa-minus" aria-hidden="true"></i>
-												</span>
-												<input type="text" tabindex="0">
-												<span>
-													<i class="fa fa-plus" aria-hidden="true"></i>
-												</span>
-											</div>
+											<p class="carttable__text carttable__text2">1</p>
 										</div>
 									</div>
 									<div class="carttable__col carttable__col_5">
@@ -2323,7 +2275,7 @@
 									<p class="cartpayment__p"><b>Количество товаров</b><span>5</span></p>
 									<p class="cartpayment__p"><b>Товаров на сумму</b><span>6 600 руб.</span></p>
 									<p class="cartpayment__p"><b>Скидки</b><span>1 201 руб.</span></p>
-									<a href="">Есть купон или промокод?</a>
+									<!-- <a href="">Есть купон или промокод?</a> -->
 								</div>
 								<div class="cartpayment__border"></div>
 								<div class="cartpayment__block">
@@ -2716,7 +2668,7 @@
 									<p>Пароль*</p>
 									<input type="password">
 								</div>
-								<a href="" class="loginpop__pass">Забыли пароль?</a>
+								<a class="loginpop__pass loginpop__pass2">Забыли пароль?</a>
 								<button class="showmore">ОФОРМИТЬ ЗАКАЗ</button>
 							</form>
 							<span class="loginpop__or">ИЛИ</span>
@@ -2736,8 +2688,21 @@
 						<div class="loginpop__box">
 							<div class="loginpop__reg">
 								<p>Нет учётной записи?</p>
-								<a href="">Зарегистрироваться</a>
+								<a class="regpop-run">Зарегистрироваться</a>
 							</div>
+						</div>
+					</div>
+					<div class="passpop">
+						<div class="loginpop__box">
+							<h2 class="loginpop__title">Восстановление пароля</h2>
+							<form action="#">
+								<div class="loginpop__input">
+									<p>Электронная почта (E-mail)*</p>
+									<input type="email">
+								</div>
+								<a class="loginpop__pass regpop-run">Регистрация</a>
+								<button class="showmore">ВОССТАНОВИТЬ ПАРОЛЬ</button>
+							</form>
 						</div>
 					</div>
 					<div class="registerpop">
@@ -2756,7 +2721,7 @@
 									<p>Пароль*</p>
 									<input type="password">
 								</div>
-								<a href="" class="registerpop__pass">Забыли пароль?</a>
+								<a class="registerpop__pass loginpop__pass2">Забыли пароль?</a>
 								<button class="showmore">ОФОРМИТЬ ЗАКАЗ</button>
 							</form>
 							<span class="registerpop__or">ИЛИ</span>
@@ -2776,7 +2741,7 @@
 						<div class="registerpop__box">
 							<div class="registerpop__reg">
 								<p>Уже есть учётная запись?</p>
-								<a href="">Войти</a>
+								<a class="login-run">Войти</a>
 							</div>
 						</div>
 					</div>
