--- a/smoky/index.html
+++ b/smoky/index.html
@@ -2980,7 +2980,7 @@
 						<div class="registerpop__box">
 							<div class="registerpop__reg">
 								<p>Уже есть учётная запись?</p>
-								<a>Войти</a>
+								<a class="login-run">Войти</a>
 							</div>
 						</div>
 					</div>
