--- a/smoky/balance_open.html
+++ b/smoky/balance_open.html
@@ -2008,15 +2008,13 @@
 							</div>
 							<div class="balanceopen__block balanceopen__block_2">
 								<div class="balanceopen__item balanceopen__item_title">
-									<div class="balanceopen__row balanceopen__row_title">
-										<div class="balanceopen__row balanceopen__row_title balanceopen__row_arrows">
+									<div class="balanceopen__row balanceopen__row_title balanceopen__row_arrows">
 										<div class="balance__prev balance__prev2 balance__arrows">
 											<i class="fa fa-angle-left" aria-hidden="true"></i>
 										</div>
 										<div class="balance__next balance__next2 balance__arrows">
 											<i class="fa fa-angle-right" aria-hidden="true"></i>
 										</div>
-									</div>
 									</div>
 									<div class="balanceopen__row balanceopen__row_2">
 										<p>Насыщенность вкуса</p>
@@ -2542,7 +2540,7 @@
 									<p>Пароль*</p>
 									<input type="password">
 								</div>
-								<a href="" class="loginpop__pass">Забыли пароль?</a>
+								<a class="loginpop__pass loginpop__pass2">Забыли пароль?</a>
 								<button class="showmore">ОФОРМИТЬ ЗАКАЗ</button>
 							</form>
 							<span class="loginpop__or">ИЛИ</span>
@@ -2562,8 +2560,21 @@
 						<div class="loginpop__box">
 							<div class="loginpop__reg">
 								<p>Нет учётной записи?</p>
-								<a href="">Зарегистрироваться</a>
+								<a class="regpop-run">Зарегистрироваться</a>
 							</div>
+						</div>
+					</div>
+					<div class="passpop">
+						<div class="loginpop__box">
+							<h2 class="loginpop__title">Восстановление пароля</h2>
+							<form action="#">
+								<div class="loginpop__input">
+									<p>Электронная почта (E-mail)*</p>
+									<input type="email">
+								</div>
+								<a class="loginpop__pass regpop-run">Регистрация</a>
+								<button class="showmore">ВОССТАНОВИТЬ ПАРОЛЬ</button>
+							</form>
 						</div>
 					</div>
 					<div class="registerpop">
@@ -2582,7 +2593,7 @@
 									<p>Пароль*</p>
 									<input type="password">
 								</div>
-								<a href="" class="registerpop__pass">Забыли пароль?</a>
+								<a class="registerpop__pass loginpop__pass2">Забыли пароль?</a>
 								<button class="showmore">ОФОРМИТЬ ЗАКАЗ</button>
 							</form>
 							<span class="registerpop__or">ИЛИ</span>
@@ -2602,7 +2613,7 @@
 						<div class="registerpop__box">
 							<div class="registerpop__reg">
 								<p>Уже есть учётная запись?</p>
-								<a href="">Войти</a>
+								<a class="login-run">Войти</a>
 							</div>
 						</div>
 					</div>
