--- a/smoky/goods.html
+++ b/smoky/goods.html
@@ -3192,7 +3192,7 @@
 									<p>Пароль*</p>
 									<input type="password">
 								</div>
-								<a href="" class="loginpop__pass">Забыли пароль?</a>
+								<a class="loginpop__pass loginpop__pass2">Забыли пароль?</a>
 								<button class="showmore">ОФОРМИТЬ ЗАКАЗ</button>
 							</form>
 							<span class="loginpop__or">ИЛИ</span>
@@ -3212,8 +3212,21 @@
 						<div class="loginpop__box">
 							<div class="loginpop__reg">
 								<p>Нет учётной записи?</p>
-								<a href="">Зарегистрироваться</a>
+								<a class="regpop-run">Зарегистрироваться</a>
 							</div>
+						</div>
+					</div>
+					<div class="passpop">
+						<div class="loginpop__box">
+							<h2 class="loginpop__title">Восстановление пароля</h2>
+							<form action="#">
+								<div class="loginpop__input">
+									<p>Электронная почта (E-mail)*</p>
+									<input type="email">
+								</div>
+								<a class="loginpop__pass regpop-run">Регистрация</a>
+								<button class="showmore">ВОССТАНОВИТЬ ПАРОЛЬ</button>
+							</form>
 						</div>
 					</div>
 					<div class="registerpop">
@@ -3232,7 +3245,7 @@
 									<p>Пароль*</p>
 									<input type="password">
 								</div>
-								<a href="" class="registerpop__pass">Забыли пароль?</a>
+								<a class="registerpop__pass loginpop__pass2">Забыли пароль?</a>
 								<button class="showmore">ОФОРМИТЬ ЗАКАЗ</button>
 							</form>
 							<span class="registerpop__or">ИЛИ</span>
@@ -3252,7 +3265,7 @@
 						<div class="registerpop__box">
 							<div class="registerpop__reg">
 								<p>Уже есть учётная запись?</p>
-								<a href="">Войти</a>
+								<a class="login-run">Войти</a>
 							</div>
 						</div>
 					</div>
